--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ git+https://github.com/django-nonrel/django@nonrel-1.5
 git+https://github.com/django-nonrel/djangotoolbox
 git+https://github.com/django-nonrel/mongodb-engine
 django-gravatar2==1.1.3
-pip install python-gettext==2.1
+python-gettext==2.1
