--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ git+https://github.com/django-nonrel/djangotoolbox
 git+https://github.com/django-nonrel/mongodb-engine
 django-gravatar2==1.1.3
 python-gettext==2.1
+Pillow=2.3.1
