Exporta también la colección de imágenes subidas.
Hace la exportación con una query condicional, para exportar sólo las entradas correspondientes a imágenes con .persist. en el nombre.
De esta forma sólo exporta las entradas que contienen una imagen almacenada en el repositorio, según los cambios en c62f94354529c994eccef67a3daf906233cc0f6a

Actualizo los datos exportados para incluír una imagen de perfil con el nuevo sistema de exportación.

--- a/mongodump/exported_json/webapp_profile.json
+++ b/mongodump/exported_json/webapp_profile.json
@@ -37,7 +37,7 @@
             "$oid": "5337f8a5144115cb2ce71e21"
         },
         "additional_languages": [],
-        "avatar": "images/300525_2588853040228_1221649994_33264808_1247701691_n.jpg",
+        "avatar": "images/pedro.persist.jpg",
         "birth_date": null,
         "display_name": "Pedro Verd",
         "following": [
