--- a/mongodump/exported_json/webapp_profile.json
+++ b/mongodump/exported_json/webapp_profile.json
@@ -7,17 +7,9 @@
         "avatar": "images/lethimaeki0031_1.jpg",
         "birth_date": null,
         "display_name": "Juhani L.",
-        "following": [
-            {
-                "display_name": "homie",
-                "user_id": {
-                    "$oid": "53412fa018085d03fc51b730"
-                },
-                "username": "homie"
-            }
-        ],
+        "following": [],
         "gender": "unknown",
-        "location": "Stalingrado",
+        "location": "Sevilla",
         "main_language": "en",
         "modification_date": null,
         "tastes": {
@@ -30,7 +22,7 @@
         "user_id": {
             "$oid": "5337f3cb144115cb2ce71e1c"
         },
-        "website": "http://www.jajajaja.com/"
+        "website": ""
     },
     {
         "_id": {
@@ -57,8 +49,8 @@
             }
         ],
         "gender": "unknown",
-        "location": "Stalingrado",
-        "main_language": "en",
+        "location": "Lugo",
+        "main_language": "es",
         "modification_date": null,
         "tastes": {
             "bitter": 40,
@@ -70,7 +62,7 @@
         "user_id": {
             "$oid": "5337f440144115cb2ce71e1d"
         },
-        "website": "http://www.jajajaja.com/"
+        "website": ""
     },
     {
         "_id": {
@@ -84,30 +76,22 @@
             "$date": 687139200000
         },
         "display_name": "francisco",
-        "following": [
-            {
-                "display_name": "homie",
-                "user_id": {
-                    "$oid": "53412fa018085d03fc51b730"
-                },
-                "username": "homie"
-            }
-        ],
-        "gender": "f",
-        "location": "Stalingrado",
-        "main_language": "en",
+        "following": [],
+        "gender": "m",
+        "location": "Sevilla",
+        "main_language": "es",
         "modification_date": null,
         "tastes": {
-            "bitter": null,
-            "salty": null,
-            "sour": null,
-            "spicy": null,
-            "sweet": null
+            "bitter": 23,
+            "salty": 23,
+            "sour": 43,
+            "spicy": 45,
+            "sweet": 46
         },
         "user_id": {
             "$oid": "5337f4b4144115cb2ce71e1e"
         },
-        "website": "http://www.jajajaja.com/"
+        "website": ""
     },
     {
         "_id": {
@@ -120,31 +104,23 @@
         "birth_date": {
             "$date": 687139200000
         },
-        "display_name": "camaron",
-        "following": [
-            {
-                "display_name": "homie",
-                "user_id": {
-                    "$oid": "53412fa018085d03fc51b730"
-                },
-                "username": "homie"
-            }
-        ],
-        "gender": "f",
-        "location": "Stalingrado",
+        "display_name": "Paco",
+        "following": [],
+        "gender": "m",
+        "location": "Segovia",
         "main_language": "en",
         "modification_date": null,
         "tastes": {
-            "bitter": null,
-            "salty": null,
-            "sour": null,
-            "spicy": null,
-            "sweet": null
+            "bitter": 34,
+            "salty": 56,
+            "sour": 32,
+            "spicy": 53,
+            "sweet": 35
         },
         "user_id": {
             "$oid": "5337f520144115cb2ce71e1f"
         },
-        "website": "http://www.jajajaja.com/"
+        "website": ""
     },
     {
         "_id": {
@@ -160,28 +136,29 @@
         "display_name": "Alex",
         "following": [
             {
-                "display_name": "homie",
+                "display_name": "francisco",
                 "user_id": {
-                    "$oid": "53412fa018085d03fc51b730"
+                    "$oid": "5337f4b4144115cb2ce71e1e"
                 },
-                "username": "homie"
+                "username": "franhg"
             }
         ],
-        "gender": "f",
-        "location": "Stalingrado",
+        "gender": "m",
+        "karma": 6,
+        "location": "Paris",
         "main_language": "en",
         "modification_date": null,
         "tastes": {
-            "bitter": null,
-            "salty": null,
-            "sour": null,
-            "spicy": null,
-            "sweet": null
+            "bitter": 45,
+            "salty": 54,
+            "sour": 43,
+            "spicy": 34,
+            "sweet": 35
         },
         "user_id": {
             "$oid": "533fb9b386c9bdaca925fee0"
         },
-        "website": "http://www.jajajaja.com/"
+        "website": ""
     },
     {
         "_id": {
@@ -194,31 +171,23 @@
         "birth_date": {
             "$date": 687139200000
         },
-        "display_name": "dimitri",
-        "following": [
-            {
-                "display_name": "homie",
-                "user_id": {
-                    "$oid": "53412fa018085d03fc51b730"
-                },
-                "username": "homie"
-            }
-        ],
-        "gender": "f",
-        "location": "Stalingrado",
+        "display_name": "James",
+        "following": [],
+        "gender": "m",
+        "location": "Liverpool",
         "main_language": "en",
         "modification_date": null,
         "tastes": {
-            "bitter": null,
-            "salty": null,
-            "sour": null,
-            "spicy": null,
-            "sweet": null
+            "bitter": 50,
+            "salty": 40,
+            "sour": 5,
+            "spicy": 23,
+            "sweet": 14
         },
         "user_id": {
             "$oid": "533fba3786c9bdaca925fee1"
         },
-        "website": "http://www.jajajaja.com/"
+        "website": ""
     },
     {
         "_id": {
@@ -231,31 +200,23 @@
         "birth_date": {
             "$date": 687139200000
         },
-        "display_name": "Thomas",
-        "following": [
-            {
-                "display_name": "homie",
-                "user_id": {
-                    "$oid": "53412fa018085d03fc51b730"
-                },
-                "username": "homie"
-            }
-        ],
-        "gender": "f",
-        "location": "Stalingrado",
+        "display_name": "Tomas",
+        "following": [],
+        "gender": "m",
+        "location": "Teruel",
         "main_language": "en",
         "modification_date": null,
         "tastes": {
-            "bitter": null,
-            "salty": null,
-            "sour": null,
-            "spicy": null,
-            "sweet": null
+            "bitter": 60,
+            "salty": 70,
+            "sour": 80,
+            "spicy": 90,
+            "sweet": 100
         },
         "user_id": {
             "$oid": "533fbad086c9bdaca925fee2"
         },
-        "website": "http://www.jajajaja.com/"
+        "website": "http://www.youtube.com/tomasrecetas"
     },
     {
         "_id": {
@@ -264,72 +225,27 @@
         "additional_languages": [
             "en"
         ],
-        "avatar": "images/i100236495_91881_5.jpg",
+        "avatar": "http://upload.wikimedia.org/wikipedia/en/9/99/MarioSMBW.png",
         "birth_date": {
             "$date": 687139200000
         },
-        "display_name": "prueba",
-        "following": [
-            {
-                "display_name": "homie",
-                "user_id": {
-                    "$oid": "53412fa018085d03fc51b730"
-                },
-                "username": "homie"
-            }
-        ],
-        "gender": "f",
-        "location": "Stalingrado",
+        "display_name": "Mario",
+        "following": [],
+        "gender": "m",
+        "location": "Madrid",
         "main_language": "en",
         "modification_date": null,
         "tastes": {
-            "bitter": null,
-            "salty": null,
-            "sour": null,
-            "spicy": null,
-            "sweet": null
+            "bitter": 60,
+            "salty": 50,
+            "sour": 10,
+            "spicy": 20,
+            "sweet": 90
         },
         "user_id": {
             "$oid": "53412d1e18085d03fc51b72d"
         },
         "website": "http://www.kosovonomola.com/"
-    },
-    {
-        "_id": {
-            "$oid": "53412fa018085d03fc51b731"
-        },
-        "additional_languages": [
-            "es"
-        ],
-        "avatar": "images/discrepo.png",
-        "birth_date": {
-            "$date": -27080352000000
-        },
-        "display_name": "homie",
-        "following": [
-            {
-                "display_name": "prueba",
-                "user_id": {
-                    "$oid": "53412d1e18085d03fc51b72d"
-                },
-                "username": "testing"
-            }
-        ],
-        "gender": "m",
-        "location": "Kosovo",
-        "main_language": "en",
-        "modification_date": null,
-        "tastes": {
-            "bitter": null,
-            "salty": null,
-            "sour": null,
-            "spicy": null,
-            "sweet": null
-        },
-        "user_id": {
-            "$oid": "53412fa018085d03fc51b730"
-        },
-        "website": "http://www.jajajaja.com/"
     },
     {
         "_id": {
